--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="javascript.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 
 <body>
-    <script src="javascript.js"></script>
+    <button id="rock-button">Rock</button>
+    <button id="paper-button">Paper</button>
+    <button id="scissors-button">Scissors</button>
+    <div id="round-display"></div>
+    <div id="score-display"></div>
+    <div id="game-end-display"></div>
 </body>
 
 </html>
